--- a/MKLApp/src/main/res/values/strings.xml
+++ b/MKLApp/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="drawer_open">Open Navigation</string>
     <string name="drawer_close">Close Navigation</string>
+    <string name="title_activity_stats">Statistics</string>
 
 </resources>
